--- a/source/style/_variables.scss
+++ b/source/style/_variables.scss
@@ -22,6 +22,7 @@ $transitionTime: 0.15s;
 //dimensions
 $maxBodyWidth: 1740px;
 $largeScreenDimension: 1610px;
+$tabletDimension: 1024px;
 $mobileDimension: 767px;
 
 //colors
