--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -12,7 +12,7 @@ block content
         div.skew-block.skew-block--left.skew-block--left-dark-transparent
         div.skew-block.skew-block--right.skew-block--right-dark-transparent
         h1.title.title--skew.title--white Мои работы
-    div.half-block-ctn
+    div.half-block-ctn.tablet-reversed.works-modify-block
         div.main-content__half-block.main-content__half-block--beige
             div.flex-center-block
                 div.work-example-description.centered
@@ -57,16 +57,16 @@ block content
                             | загружается сайт на слишком старых браузерах!
                         div.reviews-list-item__author Зар Захаров
                         div.reviews-list-item__status — преподаватель
-                div.contacts-form-ctn
+                div.contacts-form-ctn.js-form-ctn
                     h2.title.title--second-level.title--white Связаться со мной
                     div.line-separate
                     form.contacts-form
                         div.input-item
-                            input(type="text", class="input", placeholder="Ваше Имя")
+                            input(type="text", class="input js-focus-input", placeholder="Ваше Имя")
                         div.input-item
-                            input(type="email", class="input", placeholder="Ваш email")
+                            input(type="email", class="input js-focus-input", placeholder="Ваш email")
                         div.input-item
-                            textarea(class="textarea", placeholder="Ваше сообщение")
+                            textarea(class="textarea js-focus-input", placeholder="Ваше сообщение")
                         div.form-actions
                             div.form-actions__item
                                 input(type="submit", value="Отправить", class="btn btn--fw")
