--- a/source/style/typography.scss
+++ b/source/style/typography.scss
@@ -80,3 +80,33 @@
   margin-bottom: 30px;
   opacity: 0.7;
 }
+
+
+@media (max-width: $mobileDimension) {
+  .text-regular, .text-block p {
+    font-size: 0.87rem;
+  }
+
+  .subtitle {
+    font-size: 1.31rem;
+  }
+
+  .title {
+    font-size: 2.18rem;
+  }
+
+  .title--second-level {
+    font-size: 1.31rem;
+  }
+
+  .date {
+    font-size: 0.87rem;
+    margin-bottom: 15px;
+  }
+
+  .reviews-list-item {
+   font-size: 0.87rem;
+  }
+
+}
+
