--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -1,6 +1,7 @@
 extends ../_layouts/layout.pug
 
 block variables
+    - var title = 'Блог'
     - var headerTitleLarge = 'Блог'
     - var headerSubtitleText = 'Статьи, которые я написал'
     - var footerClass = 'default'
