--- a/source/template/_layouts/layout.pug
+++ b/source/template/_layouts/layout.pug
@@ -20,7 +20,7 @@ html(class=`${customClass}`)
         link(rel='stylesheet' href='/assets/css/main.css')
         script(src='/assets/js/foundation.js' defer)
         script(src='/assets/js/app.js' defer)
-        script(src="https://maps.googleapis.com/maps/api/js")
+        script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOpaCR_qN2qxXI19h-bGuRtVx7dRwh7jY&callback=initMap")
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
